--- a/demo4/css/style.css
+++ b/demo4/css/style.css
@@ -10,3 +10,20 @@ form#multiphase > #phase2, #phase3, #show_all_data
 {
 display:none;
 }
+
+
+/* BARRA DE PROGRESO MEJORADA */
+
+#myProgress {
+  width: 100%;
+  background-color: #ddd;
+}
+
+#myBar {
+  width: 10%;
+  height: 30px;
+  background-color: #4CAF50;
+  text-align: center;
+  line-height: 30px;
+  color: white;
+}
